--- a/FeatureExtraction/params_subregion.yaml
+++ b/FeatureExtraction/params_subregion.yaml
@@ -1,14 +1,10 @@
 imageType:
   Original: {}
-  LoG:
-    # Because of resampling to (3, 3, 3), the use of sigmas < 3 mm is not recommended.
-    sigma: [1.0, 2.0, 3.0]
-  Wavelet: {}
 
 featureClass:
   # redundant Compactness 1, Compactness 2 an Spherical Disproportion features are disabled by default, they can be
   # enabled by specifying individual feature names (as is done for glcm) and including them in the list.
-  shape:
+  # shape:
   firstorder:
   glcm:  # Disable SumAverage by specifying all other GLCM features available
     - 'Autocorrelation'
@@ -44,15 +40,16 @@ setting:
   # feature calculation, this confounding effect may be reduced. However, if only one specific scanner is used, or the
   # images reflect some absolute world value (e.g. ADC maps, T2maps (NOT T2 weighted)), consider disabling the
   # normalization.
-  # normalize: true
-  # normalizeScale: 100 # This allows you to use more or less the same bin width.
-  preCrop: True
+  # normalize: True
+  # normalizeScale: 100  # This allows you to use more or less the same bin width.
+
   # Resampling:
   # Increasing the resampled spacing forces PyRadiomics to look at more coarse textures, which may or
   # may not increase accuracy and stability of your extracted features. Using a small spacing in large slices generates
   # many interpolated voxels, potentially 'masking' the signal contained in the image.
   # interpolator: 'sitkBSpline'
-  resampledPixelSpacing: [1, 1, 1]
+  # resampledPixelSpacing: [1, 1, 1]
+  # preCrop: True
 
   # Mask validation:
   # correctMask and geometryTolerance are not needed, as both image and mask are resampled, if you expect very small
@@ -69,9 +66,11 @@ setting:
   # first order specific settings:
   # When normalizing, gray values below the mean will be negative. Shifting by 300 (3 StdDevs * 100) ensures that the
   # majority of voxels is positive (only outliers >3 SD lower than the mean will be negative).
-#  voxelArrayShift: 300
+#  voxelArrayShift: 150
 
   # Misc:
   # default label value. Labels can also be defined in the call to featureextractor.execute, as a commandline argument,
   # or in a column "Label" in the input csv (batchprocessing)
   label: 1
+  
+  geometryTolerance: 1e1
